# TinyETL

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_rs_cov.profraw
.cargo/: config.toml
.github/workflows/: pr.yaml  release.yml
examples/: README.md  my_job.yaml  postgres_config.yaml  run_all_examples.sh  simple_config.yaml
examples/01_basic_csv_to_json/: output.json  run.sh
examples/02_file_protocol_explicit/: input.csv  output.parquet  run.sh
examples/03_snowflake_mock_source/: run.sh  sales_export.csv
examples/04_snowflake_mock_target/: run.sh
examples/05_csv_to_sqlite/: employees.db
examples/06_csv_to_sqlite_with_transforms/: products.db
examples/07_csv_to_mysql/: customers.csv  run.sh
examples/09_ssh_file_transfer/: run.sh
examples/10_csv_to_avro/: input.csv  output.avro  run.sh
examples/12_env_var_secrets/: run.sh  users.csv
examples/13_yaml_config/: README.md  basic_config.yaml  employees.csv  employees_output.csv  employees_output.json  run.sh
examples/14_csv_to_mssql/: run.sh
examples/15_csv_to_duckdb/: README.md  products.csv  products.duckdb  products2.duckdb  products2.json  products_output.json  run.sh
examples/16_csv_to_mssql_odbc/: run.sh
examples/17_sqlite_json_to_parquet/: README.md  names.db  names_output.csv  names_output.parquet  names_schema.yaml  run.sh  setup_db.sql  test_output.csv  verify_output.json
examples/18_http_with_auth/: .gitignore  README.md  bearer_config.yaml  config.yaml  custom_headers_config.yaml  public_config.yaml  run.sh
src/: cli.rs  config.rs  date_parser.rs  error.rs  lib.rs  main.rs  schema.rs  secrets.rs  transfer.rs  transformer.rs  yaml_config.rs
src/connectors/: avro.rs  csv.rs  duckdb.rs  json.rs  mod.rs  mssql.rs  mysql.rs  odbc.rs  parquet.rs  postgres.rs  sqlite.rs
src/protocols/: file.rs  http.rs  mod.rs  snowflake.rs  ssh.rs
test_env/: README.md  docker-compose.yml  verify_http.sh
test_env/http-server/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  server.py  test.sh
test_env/http-server/configs/: basic-auth.yaml  bearer-auth.yaml  custom-headers.yaml  public.yaml
test_env/init-scripts/mssql/: init.sh  install-tools.sh
