[package]
name = "tinyetl"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "mysql", "chrono"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.16"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
arrow = { version = "50.0", features = ["csv", "json"] }
parquet = { version = "50.0", features = ["arrow", "async"] }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tempfile = "3.8"
apache-avro = "0.16"
rust_decimal = { version = "1.35", features = ["serde", "db-postgres", "db-tokio-postgres"] }
tiberius = { version = "0.12", default-features = false, features = ["sql-browser-async-std", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove debug symbols for smaller binaries
